--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>catálogo de video</title>
 </head>
 <body>
-    sou ccm #ccmcomorgulho
+   <head>sou ccm #ccmcomorgulho</head> 
 </body>
 </html>
