--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>catálogo de video</title>
 </head>
 <body>
-   <head>sou ccm #ccmcomorgulho</head> 
+   <head>duflix</head> 
    <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 #homem-aranha
 </body>
