--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"&gt;
+            <a href="https://youtu.be/e4tEwEZYELc?si=oWRoR8QTMyBPmSpz"&gt;
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg&quot; />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8"&gt;
+            <a href="https://youtu.be/4YYOORdBX1Q?si=mPd-SOn8hpTOFIsr"&gt;
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg&quot; />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc"&gt;
+            <a href="https://youtu.be/HO1d15J7GuY?si=5lLSgmVA9JnLiETU"&gt;
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg&quot; />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw"&gt;
+            <a href="https://youtu.be/OIJjulLxCak?si=8zKBguQTlh4nOB4n"&gt;
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg&quot; />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis"&gt;
+            <a href="https://youtu.be/dcqVYBoTis0?si=CZngxTWwFTsqIyEN"&gt;
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg&quot; />
             </a>
         </div>
